@@ -11,6 +11,8 @@ Improvements:
 
 Fixes:
 
+    * Check ecore_x_window_prop_card32_get() return value correctly in ecore_x_e.
+
 Removals:
 
 
